// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component renders correctly 1`] = `
<div>
  <form
    class="Form-root-4 Search-root-1"
  >
    <div
      class="InputGroup-root-9 InputGroup-lockedxs-11"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-17 InputGroup-input-10"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-31 iconButton IconButton-medium-37 IconButton-contained-32 InputGroup-button-15"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if buttonComponent provided 1`] = `
<div>
  <form
    class="Form-root-394 Search-root-391"
  >
    <div
      class="InputGroup-root-399 InputGroup-lockedxs-401"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-407 InputGroup-input-400"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button>
        buttonComponent
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if buttonText provided 1`] = `
<div>
  <form
    class="Form-root-82 Search-root-79"
  >
    <div
      class="InputGroup-root-87 InputGroup-lockedxs-89"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-95 InputGroup-input-88"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-98 MuiButton-contained Button-contained-100 InputGroup-button-93 MuiButton-containedPrimary"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label Button-label-101"
        >
          buttonText
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if clearLabel provided 1`] = `
<div>
  <form
    class="Form-root-160 Search-root-157"
  >
    <div
      class="InputGroup-root-165 InputGroup-lockedxs-167"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-173 InputGroup-input-166"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-187 iconButton IconButton-medium-193 IconButton-contained-188 InputGroup-button-171"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if defaultValue provided 1`] = `
<div>
  <form
    class="Form-root-199 Search-root-196"
  >
    <div
      class="InputGroup-root-204 InputGroup-lockedxs-206"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-212 InputGroup-input-205"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-226 iconButton IconButton-medium-232 IconButton-contained-227 InputGroup-button-210"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if fieldName provided 1`] = `
<div>
  <form
    class="Form-root-277 Search-root-274"
  >
    <div
      class="InputGroup-root-282 InputGroup-lockedxs-284"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-290 InputGroup-input-283"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="fieldName"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-304 iconButton IconButton-medium-310 IconButton-contained-305 InputGroup-button-288"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if helperText provided 1`] = `
<div>
  <form
    class="Form-root-121 Search-root-118"
  >
    <div
      class="InputGroup-root-126 InputGroup-lockedxs-128"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-134 InputGroup-input-127"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-148 iconButton IconButton-medium-154 IconButton-contained-149 InputGroup-button-132"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <p
      class="Search-helperText-119"
    >
      helperText
    </p>
  </form>
</div>
`;

exports[`Search component renders correctly if isSubmitDisabled provided 1`] = `
<div>
  <form
    class="Form-root-355 Search-root-352"
  >
    <div
      class="InputGroup-root-360 InputGroup-lockedxs-362"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-368 InputGroup-input-361"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-382 iconButton IconButton-medium-388 IconButton-contained-383 InputGroup-button-366 Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if label provided 1`] = `
<div>
  <form
    class="Form-root-238 Search-root-235"
  >
    <div
      class="InputGroup-root-243 InputGroup-lockedxs-245"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-251 InputGroup-input-244"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="label"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-265 iconButton IconButton-medium-271 IconButton-contained-266 InputGroup-button-249"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if placeholder provided 1`] = `
<div>
  <form
    class="Form-root-316 Search-root-313"
  >
    <div
      class="InputGroup-root-321 InputGroup-lockedxs-323"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-329 InputGroup-input-322"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
          data-shrink="false"
        >
          placeholder
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input"
            name="q"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-343 iconButton IconButton-medium-349 IconButton-contained-344 InputGroup-button-327"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Search component renders correctly if value provided 1`] = `
<div>
  <form
    class="Form-root-43 Search-root-40"
  >
    <div
      class="InputGroup-root-48 InputGroup-lockedxs-50"
    >
      <div
        class="MuiFormControl-root MuiTextField-root TextField-root-56 InputGroup-input-49"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
        >
          Search BMI...
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl MuiInputBase-adornedEnd MuiFilledInput-adornedEnd"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiFilledInput-input MuiInputBase-inputAdornedEnd MuiFilledInput-inputAdornedEnd"
            name="q"
            type="text"
            value="value"
          />
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-filled"
          >
            <button
              aria-label="Clear"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-70 iconButton IconButton-medium-76 IconButton-text-72"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Search-clearIcon-42"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <button
        aria-label="Search"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-70 iconButton IconButton-medium-76 IconButton-contained-71 InputGroup-button-54"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
